<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activity.SellerDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        app:navigationIcon="@drawable/ic_left_main"
        app:title="@string/seller_detail_title"
        app:titleTextColor="@color/colorYellow"
        android:elevation="5dp" />

    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/llt_seller_status"
                android:layout_marginStart="12dp"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/red_8"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/lbl_seller_status"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/seller_inactive"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/btn_seller_contact"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:background="@drawable/main_8"
                android:text="@string/seller_contact"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_seller_status"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:background="@drawable/green_8"
                android:text="@string/seller_active"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/normal_user_name"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_seller_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="Black Gold"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/normal_sur_name"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_seller_sur_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="Black Gold"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/normal_gender"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_seller_gender"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="Male"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/normal_email"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_seller_email"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="bgold1118@gmail.com"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/normal_phone_number"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_seller_phone"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="0123456789"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/normal_credit_card"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_seller_card"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="----------------"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/normal_location"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_seller_location"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="Randome Location"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/normal_history"
                android:textColor="@color/colorBlack" />

            <ListView
                android:id="@+id/lst_seller_history"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>