<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_8"
        android:elevation="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/normal_user_name"/>

            <TextView
                android:id="@+id/lbl_seller_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="Black Gold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/normal_email"/>

            <TextView
                android:id="@+id/lbl_seller_email"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:lines="1"
                android:text="bgold1118@gmail.com"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/normal_phone_number"/>

            <TextView
                android:id="@+id/lbl_seller_phone"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="+0123456789"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/normal_credit_card"/>

            <TextView
                android:id="@+id/lbl_seller_card"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="----------------"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/llt_seller_status"
                android:layout_marginStart="12dp"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/red_8"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/lbl_seller_status"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/seller_inactive"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/btn_seller_contact"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:background="@drawable/main_8"
                android:text="@string/seller_contact"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_seller_status"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:background="@drawable/green_8"
                android:text="@string/seller_active"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>