<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        app:title="@string/bottom_sellers"
        app:titleTextColor="@color/colorYellow"
        android:elevation="5dp" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/main_8_outline">

        <TextView
            android:id="@+id/lbl_seller_active"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/seller_active"
            android:background="@drawable/main_8_left"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/lbl_seller_inactive"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/seller_inactive"
            android:textColor="@color/colorYellow"
            android:gravity="center"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lst_seller_users"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"/>


</LinearLayout>